k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbuild-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbuild-mysql
  template:
    metadata:
      labels:
        app: qbuild-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8
        ports:
        - containerPort: 3306
