k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: qbuild-auth
  ports:
    - port: 3001
      targetPort: 3001
