k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbuild-gateway-service
spec:
  type: NodePort
  selector:
    app: qbuild-gateway
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30008
