k8s/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbuild-homepage-service
spec:
  type: NodePort
  selector:
    app: qbuild-homepage
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
